keep nonmodal windows out of the modal window (topmost) layer. bug 84047 r=alecf,jag